--- a/src/app/Components/notifications/notifications.component.html
+++ b/src/app/Components/notifications/notifications.component.html
@@ -66,14 +66,22 @@
     </div>
     <div class="col-md-6">
       <h3>Group Subscriptions</h3>
+      @for (n of groups(); track n.id){
       <ul class="list-group">
         <li class="list-group-item d-flex justify-content-between align-items-center">
-          order-updates
-          <div class="badge badge-primary badge-pill" (click)="joinGroup('order-updates')">Join Group
+           {{n.groupName}}
+          <div class="badge badge-primary badge-pill" (click)="joinGroup(n.groupName,n.groupId,n.isJoined,n.id)">
+
+            <span *ngIf="!n.isJoined" class="text-success">Join Group</span>
+
+              <span *ngIf="n.isJoined" class="text-danger">Exit Group</span>
+
+
           </div>
 
         </li>
       </ul>
+    }
 
     </div>
   </div>
